--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,29 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+# User-specific files
+*.suo
+*.user
+*.sln.docstates
+
+
+# Visual Studio
+*.config
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+
+# Roslyn cache directories
+*.ide/
+
+
 # =========================
 # Operating System Files
 # =========================
