more file reorganization

--- a/Brickvast.csproj
+++ b/Brickvast.csproj
@@ -47,15 +47,15 @@
     <Content Include="img\engine_demo\sun.jpg" />
     <Content Include="img\engine_demo\tile.png" />
     <Content Include="img\tile.png" />
-    <Content Include="js\AssetManager.js" />
-    <Content Include="js\CanvasManager.js" />
-    <Content Include="js\Controller.js" />
-    <Content Include="js\engine_demo\demo_drawing1.js" />
-    <Content Include="js\engine_demo\demo_mazegame1.js" />
-    <Content Include="js\Entity.js" />
-    <Content Include="js\Game.js" />
-    <Content Include="js\MathUtil.js" />
-    <Content Include="js\TheDOM.js" />
+    <Content Include="js\engine\AssetManager.js" />
+    <Content Include="js\engine\CanvasManager.js" />
+    <Content Include="js\engine\Controller.js" />
+    <Content Include="demo\demo_drawing1.js" />
+    <Content Include="demo\demo_mazegame1.js" />
+    <Content Include="js\engine\Entity.js" />
+    <Content Include="js\engine\Game.js" />
+    <Content Include="js\engine\MathUtil.js" />
+    <Content Include="js\engine\TheDOM.js" />
     <Content Include="tests\Content\jasmine\jasmine.css" />
     <Content Include="tests\Content\jasmine\jasmine_favicon.png" />
     <Content Include="img\player.png" />
