--- a/vastengine.csproj
+++ b/vastengine.csproj
@@ -58,12 +58,14 @@
     <Content Include="demo\_images\texture.png" />
     <Content Include="demo\_images\tile.png" />
     <Content Include="Gruntfile.js" />
+    <Content Include="src\AssetManager.js" />
     <Content Include="src\Canvas.js" />
     <Content Include="src\Controller.js" />
     <Content Include="demo\drawing1\demo_drawing1.js" />
     <Content Include="demo\mazegame\demo_mazegame1.js" />
     <Content Include="src\Entity.js" />
     <Content Include="src\Game.js" />
+    <Content Include="src\Input.js" />
     <Content Include="src\MathUtil.js" />
     <Content Include="demo\_sounds\LOZ_Get_Rupee.wav" />
     <Content Include="spec\Content\jasmine\jasmine.css" />
@@ -88,6 +90,7 @@
     <Content Include="spec\Views\Jasmine\SpecRunner.cshtml" />
     <Content Include=".gitignore" />
     <Content Include="README.md" />
+    <Content Include=".travis.yml" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
