--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-jasmine": "^0.8.1"
+    "grunt-contrib-jasmine": "^0.8.1",
+    "grunt-contrib-jshint": "^0.10.0"
   },
   "dependencies": {
     "grunt-jasmine-node": "^0.2.1"
