fixed build errors...

--- a/vastengine.csproj
+++ b/vastengine.csproj
@@ -138,6 +138,7 @@
   </ProjectExtensions>
   <PropertyGroup>
     <PostBuildEvent>CD $(ProjectDir)
+grunt jshint
 grunt build</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
