--- a/vastengine.csproj
+++ b/vastengine.csproj
@@ -59,6 +59,7 @@
     <Content Include="demo\_images\sun.jpg" />
     <Content Include="demo\_images\texture.png" />
     <Content Include="demo\_images\tile.png" />
+    <Content Include="spec\InputSpec.js" />
     <Content Include="src\Dialog.js" />
     <Content Include="Gruntfile.js" />
     <Content Include="src\AssetManager.js" />
