--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,6 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
 # User-specific files
 *.suo
 *.user
@@ -40,6 +34,13 @@ build/*.txt
 # Roslyn cache directories
 *.ide/
 
+# Android Studio files
+VastDroid/.gradle
+VastDroid/local.properties
+VastDroid/.idea/workspace.xml
+VastDroid/.idea/libraries
+VastDroid/.DS_Store
+VastDroid/build
 
 # ========================= 
 # Operating System Files
