cleaning up demo folder

--- a/vastengine.csproj
+++ b/vastengine.csproj
@@ -46,21 +46,21 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="build\vastengine.js" />
-    <Content Include="demo\drawing1\demo_drawing1.js" />
-    <Content Include="demo\drawing1\demo_drawing1.html" />
+    <Content Include="demo\demo_drawing1\drawing1.js" />
+    <Content Include="demo\demo_drawing1\drawing1.html" />
+    <Content Include="demo\images\bg.png" />
     <Content Include="demo\reset.css" />
-    <Content Include="demo\rooms\rooms.html" />
-    <Content Include="demo\rooms\rooms.js" />
-    <Content Include="demo\sounds1\demo_sounds1.js" />
-    <Content Include="demo\sounds1\demo_sounds1.html" />
-    <Content Include="demo\dialog_test\dialogs.html" />
-    <Content Include="demo\mazegame\demo_mazegame1.html" />
-    <Content Include="demo\_images\enemy.png" />
-    <Content Include="demo\_images\flag.png" />
-    <Content Include="demo\_images\stone.png" />
-    <Content Include="demo\_images\sun.jpg" />
-    <Content Include="demo\_images\texture.png" />
-    <Content Include="demo\_images\tile.png" />
+    <Content Include="demo\demo_rooms\rooms.html" />
+    <Content Include="demo\demo_rooms\rooms.js" />
+    <Content Include="demo\demo_sounds\sounds.js" />
+    <Content Include="demo\demo_sounds\sounds.html" />
+    <Content Include="demo\demo_dialogs\dialogs.html" />
+    <Content Include="demo\demo_mazegame\mazegame.html" />
+    <Content Include="demo\images\enemy.png" />
+    <Content Include="demo\images\flag.png" />
+    <Content Include="demo\images\stone.png" />
+    <Content Include="demo\images\sun.jpg" />
+    <Content Include="demo\images\tile.png" />
     <Content Include="spec\AssetManagerSpec.js" />
     <Content Include="spec\DialogSpec.js" />
     <Content Include="spec\InputSpec.js" />
@@ -69,13 +69,13 @@
     <Content Include="src\AssetManager.js" />
     <Content Include="src\Canvas.js" />
     <Content Include="src\Controller.js" />
-    <Content Include="demo\dialog_test\dialogs.js" />
-    <Content Include="demo\mazegame\demo_mazegame1.js" />
+    <Content Include="demo\demo_dialogs\dialogs.js" />
+    <Content Include="demo\demo_mazegame\mazegame.js" />
     <Content Include="src\Entity.js" />
     <Content Include="src\Game.js" />
     <Content Include="src\Input.js" />
     <Content Include="src\MathUtil.js" />
-    <Content Include="demo\_sounds\LOZ_Get_Rupee.wav" />
+    <Content Include="demo\sounds\LOZ_Get_Rupee.wav" />
     <Content Include="spec\Content\jasmine\jasmine.css" />
     <Content Include="spec\Content\jasmine\jasmine_favicon.png" />
     <Content Include="spec\Scripts\jasmine\boot.js" />
