--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ $RECYCLE.BIN/
 *.user
 *.sln.docstates
 
-
 # Visual Studio
 *.config
 [Dd]ebug/
@@ -40,6 +39,8 @@ VastDroid/.idea/workspace.xml
 VastDroid/.idea/libraries
 VastDroid/.DS_Store
 VastDroid/build
+VastDroid/app/build/intermediates
+
 
 # ========================= 
 # Operating System Files
