--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   "homepage": "https://github.com/Cynicollision/vastengine",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-closure-compiler": "0.0.21",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-jasmine": "^0.8.1",
+    "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-jsdoc": "^0.5.7",
     "grunt-jsdoc-to-markdown": "^0.4.2",
