--- a/VastDroid/app/src/main/AndroidManifest.xml
+++ b/VastDroid/app/src/main/AndroidManifest.xml
@@ -3,12 +3,15 @@
       package="net.seannormoyle.vastdroid"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="15" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application android:icon="@drawable/icon"
 
+        android:hardwareAccelerated="true"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
         >
