--- a/engine/vastengine.csproj
+++ b/engine/vastengine.csproj
@@ -64,6 +64,8 @@
     <Content Include="Demo\reset.css" />
     <Content Include="Demo\sounds\LOZ_Get_Rupee.wav" />
     <Content Include="Demo\vastengine.js" />
+    <Content Include="Demo\vastgame\mazegame.html" />
+    <Content Include="Demo\vastgame\mazegame.js" />
     <Content Include="spec\AssetManagerSpec.js" />
     <Content Include="spec\CanvasSpec.js" />
     <Content Include="spec\Content\jasmine\jasmine.css" />
@@ -91,16 +93,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="spec\Views\Jasmine\SpecRunner.cshtml" />
-    <None Include="web.Debug.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
-    <None Include="web.Release.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
