--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.8.0",
     "grunt-jsdoc": "^0.5.7",
     "grunt-jsdoc-to-markdown": "^0.4.2",
     "jsdoc-to-markdown": "^0.5.9",
