--- a/engine/vastengine.csproj
+++ b/engine/vastengine.csproj
@@ -86,6 +86,7 @@
     <Content Include="src\AssetManager.js" />
     <Content Include="src\CanvasManager.js" />
     <Content Include="src\Controller.js" />
+    <Content Include="src\Debug.js" />
     <Content Include="src\Dialog.js" />
     <Content Include="src\Entity.js" />
     <Content Include="src\Game.js" />
