--- a/package.json
+++ b/package.json
@@ -31,11 +31,10 @@
     "grunt-contrib-jshint": "^0.11.1",
     "grunt-contrib-uglify": "^0.8.1",
     "grunt-jsdoc": "^0.5.8",
-    "grunt-jsdoc-to-markdown": "^0.4.3",
-    "jsdoc-to-markdown": "^0.5.11",
-    "more-fs": "^0.5.0"
+    "more-fs": "^0.5.0",
+	"grunt-jasmine-node": "^0.3.0"
   },
   "dependencies": {
-    "grunt-jasmine-node": "^0.3.0"
+    
   }
 }
