--- a/package.json
+++ b/package.json
@@ -28,13 +28,11 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jasmine": "^0.8.2",
-    "grunt-contrib-jshint": "^0.11.1",
-    "grunt-contrib-uglify": "^0.8.1",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-jasmine-node": "^0.3.1",
     "grunt-jsdoc": "^0.5.8",
-    "more-fs": "^0.5.0",
-	"grunt-jasmine-node": "^0.3.0"
+    "more-fs": "^0.5.0"
   },
-  "dependencies": {
-    
-  }
+  "dependencies": {}
 }
